examples/minimal/violates-constraint/CV-CER2-bad.c
// Copyright (c) 2015 RV-Match Team. All Rights Reserved.

int main() {
  register int x;
  int *y = &x;
  return 0;
}
